fix(region): text alignment for at mentions in annotation popup in IE (#677)

--- a/src/components/ItemList/ItemList.scss
+++ b/src/components/ItemList/ItemList.scss
@@ -4,6 +4,7 @@
         margin: 0;
         padding: 0;
         overflow-y: auto;
+        text-align: left;
         list-style: none;
     }
 }
